--- a/index.html
+++ b/index.html
@@ -1,35 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Netfix India - watch TV shows</title>
-    <link rel="stylesheet" href="style.css">
+    <title>>Netfix India - watch TV shows</title>
+    <link rel="stylesheet" href="style1.css">
 </head>
-
 <body>
     <div class="main">
         <nav>
-            <span><img width=53 src="assets/images/logo.svg" alt=""></span>
+            <span><img src="https://upload.wikimedia.org/wikipedia/commons/0/08/Netflix_2015_logo.svg" alt="Netflix"></span>
             <div>
-                <button class="btn ">English</button>
+                <button class="btn">English</button>
                 <button class="btn btn-red-sn">Sign In</button>
             </div>
         </nav>
-        <div class="box">
-        </div>
+        <div class="box"></div>
         <div class="hero">
             <span><b>Enjoy big movies, hit series and more from ₹ 149.</b></span>
             <span>Join today. Cancel anytime.</span>
             <span>Ready to watch? Enter your email to create or restart your membership.</span>
             <div class="hero-buttons">
                 <input type="text" placeholder="Email Address">
-                <button class="btn btn-red">Get Started &gt</button>
+                <button class="btn btn-red">Get Started &gt;</button>
             </div>
         </div>
-        <div class="seperation">
-        </div>
+        <div class="seperation"></div>
         <section class="first">
             <div>
                 <span>Enjoy on your TV</span>
@@ -37,24 +33,20 @@
             </div>
             <div class="secImg">
                 <img src="https://assets.nflxext.com/ffe/siteui/acquisition/ourStory/fuji/desktop/tv.png" alt="">
-                <video
-                src="https://assets.nflxext.com/ffe/siteui/acquisition/ourStory/fuji/desktop/video-tv-in-0819.m4v"
-                autoplay loop muted></video>
+                <video src="https://assets.nflxext.com/ffe/siteui/acquisition/ourStory/fuji/desktop/video-tv-in-0819.m4v" autoplay loop muted></video>
             </div>
         </section>
-        <div class="seperation">
-        </div>
+        <div class="seperation"></div>
         <section class="first second">
             <div class="secImg">
                 <img src="https://assets.nflxext.com/ffe/siteui/acquisition/ourStory/fuji/desktop/mobile-0819.jpg" alt="">
             </div>
             <div>
                 <span>Download your shows to watch offline</span>
-            <span>Save your favourites easily and always have something to watch.</span>
+                <span>Save your favourites easily and always have something to watch.</span>
             </div>
         </section>
-        <div class="seperation">
-        </div>
+        <div class="seperation"></div>
         <section class="first third">
             <div>
                 <span>Watch everywhere</span>
@@ -62,29 +54,20 @@
             </div>
             <div class="secImg">
                 <img src="https://assets.nflxext.com/ffe/siteui/acquisition/ourStory/fuji/desktop/tv.png" alt="">
-                <video src="https://assets.nflxext.com/ffe/siteui/acquisition/ourStory/fuji/desktop/video-devices-in.m4v"
-                    autoplay loop muted></video>
+                <video src="https://assets.nflxext.com/ffe/siteui/acquisition/ourStory/fuji/desktop/video-devices-in.m4v" autoplay loop muted></video>
             </div>
         </section>
-
         <div class="seperation"></div>
         <section class="first second">
-
             <div class="secImg">
-                <img src="https://occ-0-2849-3646.1.nflxso.net/dnm/api/v6/19OhWN2dO19C9txTON9tvTFtefw/AAAABVr8nYuAg0xDpXDv0VI9HUoH7r2aGp4TKRCsKNQrMwxzTtr-NlwOHeS8bCI2oeZddmu3nMYr3j9MjYhHyjBASb1FaOGYZNYvPBCL.png?r=54d"
-                    alt="">
-    
+                <img src="https://occ-0-2849-3646.1.nflxso.net/dnm/api/v6/19OhWN2dO19C9txTON9tvTFtefw/AAAABVr8nYuAg0xDpXDv0VI9HUoH7r2aGp4TKRCsKNQrMwxzTtr-NlwOHeS8bCI2oeZddmu3nMYr3j9MjYhHyjBASb1FaOGYZNYvPBCL.png?r=54d" alt="">
             </div>
             <div>
                 <span>Create profiles for kids</span>
-                <span>Send children on adventures with their favourite characters in a space made just for them—free with
-                    your membership.</span>
+                <span>Send children on adventures with their favourite characters in a space made just for them—free with your membership.</span>
             </div>
         </section>
-    
         <div class="seperation"></div>
     </div>
-
 </body>
-
 </html>
